# qwed-verification

./: .coderabbit.yaml  .coverage  .env.example  .gitignore  .qwed.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_VERIFIER_FIX.txt  CONTRIBUTING.md  CONTRIBUTOR_ONBOARDING.md  Dockerfile  GOVERNANCE.md  LICENSE  MANIFEST.in  QWED_RULES.md  README.md  RELEASE_NOTES_v2.2.0.md  SECURITY.md  SECURITY_REVIEW.md  STATS_FIXES.py  action.yml  action_entrypoint.py  cert.pem  consensus_endpoint.py  docker-compose.yml  entrypoint.sh  evaluation_results.json  funding.json  git_logs.txt  git_logs2.txt  key.pem  llms.txt  mkdocs.yml  out.txt  pyproject.toml  pytest_out.txt  qwed.db  qwed_temp.db  qwed_v2.db  requirements.in  (+19 more)
.circleci/: config.yml
.github/: FUNDING.yml  TEST_TRIGGER.md  copilot-instructions.md  pull_request_template.md
architecture/: CODEBASE_STRUCTURE.md  README.md  SECURITY_IMPLEMENTATION_REPORT.md
benchmarks/: STRATEGY.md  crosshair_limits_benchmark.py  gsm_symbolic.py  performance_profiler.py  report_generator.py  results.json  runner.py  unreadable_code_challenge.py
deploy/: docker-compose.yml
docs/: API.md  ARCHITECTURE.md  ASSURANCE_CASE.md  BUSINESS_STRATEGY.md  CHANGELOG_POST.md  CLI.md  CONTRIBUTOR_ONBOARDING.md  CORE_CONCEPTS.md  DEEP_BENCHMARK_REPORT.md  DEPLOYMENT.md  FRONTEND_INTEGRATION_GUIDE.md  FRONTEND_REVIEW.md  GEMINI_DESIGN_PROMPT.md  GOOD_FIRST_ISSUES.md  INTEGRATION.md  (+18 more)
docs-site/: build_error.txt  build_error2.txt  docusaurus.config.ts  sidebars.ts
qwed-core/: Dockerfile  README.md  pyproject.toml
qwed-core/src/qwed_core/: __init__.py
(+426 files in other folders)
